Remove initial development on Mac

--- a/geometry/Makefile
+++ b/geometry/Makefile
@@ -1,10 +1,10 @@
 all: geometry_generator
 
 geometry_generator: main.o
-	g++ -L/sw/lib -lboost_program_options-mt main.o -o geometry_generator
+	g++ -lboost_program_options-mt main.o -o geometry_generator
 
 main.o: main.cpp
-	g++ -I/sw/include/boost-1_41 -c main.cpp -o main.o
+	g++ -c main.cpp -o main.o
 
 clean:
 	rm main.o geometry_generator
