Update after Debian Jessie 8 release

--- a/mesh/Makefile
+++ b/mesh/Makefile
@@ -1,7 +1,7 @@
 all: mesh_generator
 
 mesh_generator: main.o
-	g++ -lboost_program_options-mt main.o -o mesh_generator
+	g++ -lboost_program_options main.o -o mesh_generator
 
 main.o: main.cpp
 	g++ -c main.cpp -o main.o
