--- a/geometry/Makefile
+++ b/geometry/Makefile
@@ -1,7 +1,7 @@
 all: geometry_generator
 
 geometry_generator: main.o
-	g++ -O3 -lboost_program_options-mt main.o -o geometry_generator
+	g++ -O3 -lboost_program_options main.o -o geometry_generator
 
 main.o: main.cpp
 	g++ -O3 -c main.cpp -o main.o
